add new features in documentation
