# src/routes/index.ts
@@ -4,7 +4,7 @@ import {categoriesRoutes} from "./categories.routes";
 import {specificationRoutes} from "./specifications.routes"
 const router = Router()
 router.use('/categories', categoriesRoutes);
-router.use('/specification', specificationRoutes);
+router.use('/specifications', specificationRoutes);
 
 export {router}
 
