# src/swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "Rentalx Documentation",
+    "title": "Rentx Documentation",
     "description": "This is an API Rent",
     "version": "1.0.0",
     "contact": {
@@ -70,6 +70,63 @@
               }
             }
           }
+        }
+      }
+    },
+    "/catgeories/import":{
+      "post":{
+        "tags":["Category"],
+        "summary":"Upload a new Category",
+        "requestBody":{
+          "content":{
+            "application/octet-stream":{
+              "schema": {
+                "type":"string"
+              }
+            }
+          }
+        },
+        "reponses":{
+          "201":{
+            "description":"Created"
+          }
+        }
+      }
+    },
+    "/specifications": {
+      "post": {
+        "tags": ["Specfications"],
+        "summary": "Create a specification",
+        "description": "Create a new Specfication",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Specifition"
+              }
+            }
+          }
+        },
+        "responses":{
+          "201":{
+            "description":"Created"
+          },
+          "500":{
+            "description":"Specification already exists"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Specifition": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
         }
       }
     }
